--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
@@ -132,6 +133,15 @@
             <artifactId>javax.mail</artifactId>
             <version>RELEASE</version>
         </dependency>
+        <!--jwt:json web token-->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.8.1</version>
+        </dependency>
+
+
+
         <!--commons-lang3工具包-->
         <dependency>
             <groupId>org.apache.commons</groupId>
