--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,20 +11,42 @@ spring:
     cache: false
 
   #jdbc配置
-  datasource:
-    type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/springbootdb?useUnicode=true&characterEncoding=utf8
-    username: mango
-    password: root5.7.22
+#  datasource:
+#    type: com.alibaba.druid.pool.DruidDataSource
+#    driver-class-name: com.mysql.jdbc.Driver
+#    url: jdbc:mysql://localhost:3306/springbootdb?useUnicode=true&characterEncoding=utf8
+#    username: mango
+#    password: root5.7.22
 
 
-#Mybatis配置
-mybatis:
-  #设置别名
-  type-aliases-package: com.xlx.ssmshiro.entity
-  mapper-locations: classpath:mapper/*.xml
-  config-location: classpath:generatorConfig.xml
+#mybatis-plus
+#mybatis-plus:
+#  mapper-locations: classpath:/mapper/*Mapper.xml
+#  #实体扫描，多个package用逗号或者分号分隔
+#  typeAliasesPackage: com.xlx.ssmshiro.entity
+#  typeEnumsPackage:
+#  global-config:
+#    # 数据库相关配置
+#    db-config:
+#      #主键类型  AUTO:"数据库ID自增", INPUT:"用户输入ID",ID_WORKER:"全局唯一ID (数字类型唯一ID)", UUID:"全局唯一ID UUID";
+#      id-type: AUTO
+#      #字段策略 IGNORED:"忽略判断",NOT_NULL:"非 NULL 判断"),NOT_EMPTY:"非空判断"
+#      field-strategy: not_empty
+#      #驼峰下划线转换
+#      column-underline: true
+#      #数据库大写下划线转换
+#      #capital-mode: true
+#      #逻辑删除配置
+#      logic-delete-value: 0
+#      logic-not-delete-value: 1
+#      db-type: mysql
+#    #刷新mapper 调试神器
+#    refresh: true
+#  # 原生配置
+#  configuration:
+#    map-underscore-to-camel-case: true
+#    cache-enabled: false
+
 
 #日志配置
 logging:
