--- a/pom.xml
+++ b/pom.xml
@@ -75,23 +75,17 @@
 
 
         <!--quartz调度-->
-        <!--<dependency>
-        <groupId>org.apache.shiro</groupId>
-        <artifactId>shiro-quartz</artifactId>
-        <version>1.4.1</version>
-    </dependency>-->
+        <!-- quartz -->
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+        </dependency>
 
         <!-- spring cache -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-cache</artifactId>
         </dependency>
-
-        <!-- <dependency>
-        <groupId>net.sf.ehcache</groupId>
-        <artifactId>ehcache</artifactId>
-        <version>2.10.6</version>
-    </dependency>-->
 
         <!-- redis -->
         <dependency>
@@ -216,13 +210,6 @@
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
             <version>1.9.2</version>
-        </dependency>
-
-        <!-- druid数据源驱动 -->
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid-spring-boot-starter</artifactId>
-            <version>1.1.10</version>
         </dependency>
 
         <!-- reflecyions tools -->
