获取index页面用户菜单

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -60,8 +60,8 @@ spring:
   # thymeleaf模板
   thymeleaf:
     cache: false
-    model: HTML
     encoding: utf-8
+    mode: HTML
 
   # Spring-AOP
   aop:
