--- a/pom.xml
+++ b/pom.xml
@@ -248,16 +248,16 @@
             </plugin>
 
             <!--mybatis的generator插件 -->
-            <!--<plugin>
+           <plugin>
                 <groupId>org.mybatis.generator</groupId>
                 <artifactId>mybatis-generator-maven-plugin</artifactId>
                 <version>1.3.7</version>
                 <configuration>
-                    <configurationFile>src/main/resources/generatorConfig.xml</configurationFile>
+                    <configurationFile>src/main/resources/generator/generatorConfig.xml</configurationFile>
                     <verbose>true</verbose>
                     <overwrite>true</overwrite>
                 </configuration>
-            </plugin>-->
+            </plugin>
         </plugins>
         <finalName>ssm-shiro</finalName>
     </build>
