--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -85,9 +85,13 @@ mybatis:
 
 # mybatis的分页插件
 pagehelper:
-  helperDialect: mysql
+  #指定数据库
+  helper-dialect: mysql
+  #合理分页
   reasonable: true
-  supportMethodsArguments: true
+  #自动从params中配置的字段取值,查找到合适的值时就会自动分页
+  support-methods-arguments: true
+  #count
   params: count=countSql
 
 #  日志配置
