--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.xlx</groupId>
     <artifactId>spring-boot-shiro</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>ssm-shiro</name>
+    <name>ssmp-shiro</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
