--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,50 +1,21 @@
-<<<<<<< HEAD
 #服务配置
 server:
-  port: 8887
+  port: 8080
 
-# spring配置
+  # spring配置
 spring:
+  # jdbc配置
+  datasource:
+    driver-class-name: org.h2.Driver
+    #schema: classpath:db/schema-h2.sql
+    #data: classpath:db/data-h2.sql
+    # mem表示在缓存里
+    url: jdbc:h2:D://data//test
+    username: sa
+    password: 123
   #thymeleaf模板
   thymeleaf:
     mode: HTML
     encoding: UTF-8
     cache: false
-
-  # jdbc配置
-  datasource:
-    type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/springbootdb?useUnicode=true&characterEncoding=utf8
-    username: mango
-    password: root5.7.22
-
-# mybatis-plus
-mybatis-plus:
-  mapper-locations: classpath:/mapper/*Mapper.xml
-  #实体扫描，多个package用逗号或者分号分隔
-  typeAliasesPackage: com.xlx.mpd.system.entity
-  typeEnumsPackage:
-  global-config:
-    # 数据库相关配置
-    db-config:
-      #主键类型  AUTO:"数据库ID自增", INPUT:"用户输入ID",ID_WORKER:"全局唯一ID (数字类型唯一ID)", UUID:"全局唯一ID UUID";
-      id-type: AUTO
-      #字段策略 IGNORED:"忽略判断",NOT_NULL:"非 NULL 判断"),NOT_EMPTY:"非空判断"
-      field-strategy: not_empty
-      #驼峰下划线转换
-      column-underline: true
-      #数据库大写下划线转换
-      #capital-mode: true
-      #逻辑删除配置
-      logic-delete-value: 0
-      logic-not-delete-value: 1
-      db-type: mysql
-
-    #刷新mapper 调试神器
-    refresh: true
-  # 原生配置
-  configuration:
-    map-underscore-to-camel-case: true
-    cache-enabled: false
 
