--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -4,13 +4,32 @@ server:
 
   # spring配置
 spring:
-  # jdbc配置
   datasource:
-    type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/springbootdb?useUnicode=true&characterEncoding=utf8
-    username: mango
-    password: root5.7.22
+    druid:
+      db-type: com.alibaba.druid.pool.DruidDataSource
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      url: jdbc:mysql://localhost:3306/springbootdb?useSSL=false&useUnicode=true&characterEncoding=utf8
+      username: mango
+      password: root5.7.22
+      # 连接池配置
+      initial-size: 5
+      min-idle: 5
+      max-active: 20
+      # 连接等待超时时间
+      max-wait: 30000
+      # 配置检测可以关闭的空闲连接间隔时间
+      time-between-eviction-runs-millis: 60000
+      # 配置连接在池中的最小生存时间
+      min-evictable-idle-time-millis: 300000
+      validation-query: select '1' from dual
+      test-while-idle: true
+      test-on-borrow: false
+      test-on-return: false
+      # 打开PSCache，并且指定每个连接上PSCache的大小
+      pool-prepared-statements: true
+      max-open-prepared-statements: 20
+      max-pool-prepared-statement-per-connection-size: 20
+      #druid的监控
   #thymeleaf模板
   thymeleaf:
     mode: HTML
@@ -19,28 +38,30 @@ spring:
   aop:
     auto: true
     proxy-target-class: true
-  # mybatis-plus
+
+
+
+# mybatis-plus
 mybatis-plus:
-  mapper-locations: classpath:/mapper/*Mapper.xml
+  config-location: classpath:applicationContext.xml
+  #mapper-locations: classpath:/mapper/*Mapper.xml
   #实体扫描，多个package用逗号或者分号分隔
   typeAliasesPackage: com.xlx.mpd.system.entity
   typeEnumsPackage:
   global-config:
-    #主键类型  AUTO:"数据库ID自增"
-    id-type: 0
-    #字段策略 NOT_EMPTY:"非空判断"
-    field-strategy: 2
-    #驼峰下划线转换
-    db-column-underline: true
-    #数据库大写下划线转换
-    capital-mode: true
-    #逻辑删除配置
-    logic-delete-value: 0
-    logic-not-delete-value: 1
-    #刷新mapper 调试神器
-    refresh-mapper: true
+    db-config:
+      #主键类型  AUTO:"数据库ID自增"
+      id-type: AUTO
+      #数据库大写下划线转换
+      capital-mode: false
+      #逻辑删除配置
+      logic-delete-field: flag # 全局逻辑删除字段
+      logic-delete-value: 1
+      logic-not-delete-value: 0
+      table-underline: true
   # 原生配置
   configuration:
     map-underscore-to-camel-case: true
     cache-enabled: false
+    jdbc-type-for-null: null
 
