--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,12 @@
             <optional>true</optional>
         </dependency>
 
+        <!--统一表达式语言 JSR341-->
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.el</artifactId>
+            <version>3.0.1-b11</version>
+        </dependency>
 
         <!--commons-lang3工具包-->
         <dependency>
