--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -8,7 +8,7 @@ spring:
     druid:
       db-type: com.alibaba.druid.pool.DruidDataSource
       driver-class-name: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://localhost:3306/springbootdb?useSSL=false&useUnicode=true&characterEncoding=utf8
+      url: jdbc:mysql://localhost:3306/mybatisplusdb?useSSL=false&useUnicode=true&characterEncoding=utf8
       username: mango
       password: root5.7.22
       # 连接池配置
@@ -58,7 +58,7 @@ mybatis-plus:
       # 主键自增
       id-type: AUTO
       #逻辑删除配置
-      logic-delete-field: flag # 全局逻辑删除字段值,即数据库字段flag表示逻辑删除
+      logic-delete-field: deleted # 全局逻辑删除字段值,即数据库字段flag表示逻辑删除
       # 逻辑已删除值(默认为 1)
       logic-delete-value: 1
       # 逻辑未删除值(默认为 0)
