--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,15 @@
         </dependency>
 
 
+        <!-- wiremock单元测试 -->
+        <dependency>
+            <groupId>com.github.tomakehurst</groupId>
+            <artifactId>wiremock</artifactId>
+            <version>2.26.3</version>
+            <type>pom</type>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 
