--- a/pom.xml
+++ b/pom.xml
@@ -144,15 +144,21 @@
             <version>1.2.57</version>
         </dependency>
 
-
-        <!-- wiremock单元测试 -->
+        <!--swagger2的api-->
         <dependency>
-            <groupId>com.github.tomakehurst</groupId>
-            <artifactId>wiremock</artifactId>
-            <version>2.26.3</version>
-            <type>pom</type>
-            <scope>test</scope>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.9.2</version>
         </dependency>
+
+        <!--swagger2的html页面-->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+
+
 
     </dependencies>
 
